--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <div class="imginicio">
-        <img id="imginciopng" src="g.png" alt="Descripción de la imagen">
+        <img id="imginciopng" src="g.png" alt="G">
         <p id="imginciotext">
             La masonería es una organización fraternal que existe desde hace cientos de años. Sus miembros se llaman masones y provienen de todos los ámbitos de la vida, incluidos médicos, abogados, maestros y hombres de negocios.
 
