--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="basic.css" >
     <title> Albañileria Simbolica </title>
+    <link rel="shortcut icon" href="esculog.png" type="logo">
 </head>
 <body>
 <script src="main.js"></script>
